2015-06-07  Esa Peuha  <esa.peuha@gmail.com>

	* games/spider.c, lib/imagelib.h: Remove declaration of nonexisting
	  function get_image_set_display_type

2015-06-06  Esa Peuha  <esa.peuha@gmail.com>

	* games/canfield.c, games/golf.c, games/mastermind.c, games/merlin.c,
	  games/minesweeper.c, games/pegged.c, games/taipedit.c,
	  games/taipei.c, games/taipeilib.c, lib/help.c, lib/stack.c:
	  Remove unneeded extern declarations.

2015-06-05  Esa Peuha  <esa.peuha@gmail.com>

	* games/thornq.c: Fix undo bug.
	* lib/stack.c (stack_flip_move_stack): Fix undo bug.

2015-06-04  Esa Peuha  <esa.peuha@gmail.com>

	* games/solitaire.c (app_options): Mark non-static so that command
	  line options work.
	* lib/stack.c (stack_fan_*): Mark variables static.
	* lib/table.c: Remove unused extern declarations of stack_fan_*
	* games/golf.c: Replace reference to stack_fan_down with call to
	  stack_get_fans.
	* games/spider.c, games/thornq.c: Don't pass pointers to unused
	  variables to stack_get_fans.

2015-06-03  Esa Peuha  <esa.peuha@gmail.com>

	* games/freecell.c: fix display bug.
	* lib/cards.h, lib/stack.c (stack_flip_move_stack): New function.
	* games/solitaire.c, games/thornq.c: Use stack_flip_move_stack
	* games/spider.c: Use stack_flip_move_stack
	* docs/toolkit.html: Document stack_flip_move_stack

2015-06-02  Esa Peuha  <esa.peuha@gmail.com>

	* lib/make-imglib.c, lib/xwin.c: Change png_ptr->jmpbuf to
	  png_jmpbuf(png_ptr)
	* lib/xwin.c: Change voidp to png_voidp
	* lib/help.c, lib/imagelib.c, lib/stack.c, lib/table.c, lib/xwin.c:
	  Mark functions and variables static.
	* games/golf.c: fix display bug.

2015-05-31  Esa Peuha  <esa.peuha@gmail.com>

	* INSTALL, config.guess, config.sub, depcomp, install-sh,
	  missing, mkinstalldirs: Update.
	* lib/make-imglib.c (tokenize): Return NULL instead of 0 or
	  nothing.
	* lib/xwin.c (xwin_nextevent): Ignore spurious MotionNotify events.
	* lib/xwin.c (PropMwmHints): Change ints to longs for 64-bit support.
