@@ -18,6 +18,8 @@
 
 #include <stdio.h>
 #include <stdlib.h>
+
+#include "table.h"
 #include "cards.h"
 
 #define W CARD_WIDTH
