@@ -21,6 +21,7 @@
 #include <time.h>
 
 #include "imagelib.h" 
+#include "table.h"
 #include "cards.h"
 
 #define W CARD_WIDTH
